[gd_scene load_steps=2 format=3 uid="uid://y17z1jf8my3yn"]

[ext_resource type="Script" uid="uid://dqkv7egmuvecx" path="res://algorithms/patterngeneration/diffusion_limited_aggregation/DiffusionLimitedAggregation.gd" id="1_dla"]

[node name="DiffusionLimitedAggregation" type="Node3D"]
script = ExtResource("1_dla")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4.7833, 4.17774)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 12, 0)
light_energy = 1.5

[node name="AggregateStructure" type="Node3D" parent="."]

[node name="WalkingParticles" type="Node3D" parent="."]

[node name="Seed" type="CSGSphere3D" parent="."]
radius = 0.1

[node name="ParticleCount" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
height = 1.0

[node name="StructureSize" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
size = Vector3(0.8, 1, 0.4)
